# plugin

./: CMakeLists.txt
src/: dynlib.cpp  dynlib.h  imodule.cpp  imodule.h  iplugin  iplugin.h  ipluginmanager.cpp  ipluginmanager.h  main.cpp  platform.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  pobject.cpp  pobject.h
src/tutorial1/: HelloWorld1.cpp  HelloWorld1.h  Tutorial1.cpp  Tutorial1.h
